<resources>
    <string name="app_name">SnookerScoreKeeper</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="pot">Pot balls:</string>
    <string name="foul">Fouls:</string>
    <string name="ball_on">Ball on:</string>
    <string name="start_value_score">0</string>
    <string name="start_value_btn">1</string>
    <string name="start_red_ball">15</string>
    <string name="background_description">Snooker table</string>
    <string name="wrong_shot">Wrong shot</string>
    <string name="restart_match">Restart match</string>
</resources>
