<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:contentDescription="@string/background_description"
        android:scaleType="fitXY"
        android:src="@drawable/snooker_table" />

    <LinearLayout
        android:id="@+id/player_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/p1_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/player_1"
                android:textColor="#FFF"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/p1_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:text="@string/start_value"
                android:textColor="#FFF"
                android:textSize="56sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/pot"
                android:textColor="#FFF"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/red_ball_p1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/red_ball"
                    android:gravity="center"
                    android:text="@string/start_value"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/yellow_ball_p1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/yellow_ball"
                    android:gravity="center"
                    android:text="@string/start_value"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/green_ball_p1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/green_ball"
                    android:gravity="center"
                    android:text="@string/start_value"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/brown_ball_p1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/brown_ball"
                    android:gravity="center"
                    android:text="@string/start_value"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/blue_ball_p1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/blue_ball"
                    android:gravity="center"
                    android:text="@string/start_value"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/pink_ball_p1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/pink_ball"
                    android:gravity="center"
                    android:text="@string/start_value"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/black_ball_p1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/black_ball"
                    android:gravity="center"
                    android:text="@string/start_value"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="28dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="16dp"
                    android:text="@string/foul"
                    android:textColor="#FFF"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/start_value"
                    android:textColor="#FFF"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#FFF" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/p2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/player_2"
                android:textColor="#FFF"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/p2_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:text="@string/start_value"
                android:textColor="#FFF"
                android:textSize="56sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/pot"
                android:textColor="#FFF"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/red_ball_p2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/red_ball"
                    android:gravity="center"
                    android:text="@string/start_value"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/yellow_ball_p2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/yellow_ball"
                    android:gravity="center"
                    android:text="@string/start_value"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/green_ball_p2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/green_ball"
                    android:gravity="center"
                    android:text="@string/start_value"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/brown_ball_p2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/brown_ball"
                    android:gravity="center"
                    android:text="@string/start_value"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/blue_ball_p2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/blue_ball"
                    android:gravity="center"
                    android:text="@string/start_value"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/pink_ball_p2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/pink_ball"
                    android:gravity="center"
                    android:text="@string/start_value"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/black_ball_p2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/black_ball"
                    android:gravity="center"
                    android:text="@string/start_value"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="28dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="16dp"
                    android:text="@string/foul"
                    android:textColor="#FFF"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/start_value"
                    android:textColor="#FFF"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/ball_in_table_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/player_layout"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:text="@string/ball_on"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ball_in_table_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/yellow_ball_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/yellow_ball"
            android:gravity="center"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:onClick="colourBallShot"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/green_ball_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/green_ball"
            android:gravity="center"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:onClick="colourBallShot"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/brown_ball_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/brown_ball"
            android:gravity="center"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:onClick="colourBallShot"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/red_ball_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/red_ball"
            android:gravity="center"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:onClick="redBallShot"
            android:text="@string/start_red_ball"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/blue_ball_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/blue_ball"
            android:gravity="center"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:onClick="colourBallShot"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/pink_ball_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/pink_ball"
            android:gravity="center"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:onClick="colourBallShot"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/black_ball_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/black_ball"
            android:gravity="center"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:onClick="colourBallShot"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/restart_match" />
</RelativeLayout>
